objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Telemarketing Leads</fullName>
        <description>Use this option when creating Leads gathered from a Telemarketing Campaign</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tradeshow Leads</fullName>
        <description>Use this option when creating Leads gathered from a Tradeshow</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Web to Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Employee_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the user who has referred the lead — for marketing use only.</description>
        <inlineHelpText>Identifies the user who has referred the lead.</inlineHelpText>
        <label>Employee Referral</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>VAR User profile users are not able to refer leads.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>VAR User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_Decision_Date__c</fullName>
        <description>Date when the Lead is likely to be converted.</description>
        <inlineHelpText>Date when the Lead is likely to be converted.</inlineHelpText>
        <label>Likely Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Customer’s geographical region – for sales operations use only.</description>
        <inlineHelpText>In which region is the customer based?</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telesales_Rating__c</fullName>
        <formula>IF(ISBLANK(Likely_Decision_Date__c), &quot;Cold 👎&quot;, IF(Likely_Decision_Date__c &gt;= Today() + 30,  &quot;Warm 👀&quot;, &quot;Hot 🔥&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telesales Rating</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Likely_Decision_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Leads_Telemarketing</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Web_to_Lead</value>
        </filters>
        <label>Leads Web to Lead</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Leads_Tradeshow</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Telemarketing_Lead</value>
        </filters>
        <label>Leads Telemarketing</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Team_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA Sales Team Queue</label>
        <queue>EMEA_Sales_Team_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Tradeshow_Lead</value>
        </filters>
        <label>Leads Tradeshow</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>US_Sales_Team_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>US Sales Team Queue</label>
        <queue>US_Sales_Team_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Telemarketing_Lead</fullName>
        <active>true</active>
        <businessProcess>Telemarketing Leads</businessProcess>
        <description>Use this option when creating Leads gathered from a Telemarketing Campaign</description>
        <label>Telemarketing Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tradeshow_Lead</fullName>
        <active>true</active>
        <businessProcess>Tradeshow Leads</businessProcess>
        <description>Use this option when creating Leads gathered from a Tradeshow</description>
        <label>Tradeshow Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_to_Lead</fullName>
        <active>true</active>
        <businessProcess>Web to Lead</businessProcess>
        <description>Do NOT use internally.  For web generated leads only.</description>
        <label>Web to Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Likely_Decision_Date_cannot_be_in_the_pa</fullName>
        <active>true</active>
        <errorConditionFormula>Likely_Decision_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Likely_Decision_Date__c</errorDisplayField>
        <errorMessage>The Likely Decision Date is in the past. Update the Likely Decision Date to a day in the future or convert the lead.</errorMessage>
    </validationRules>
</CustomObject>